# riotApi

./: .gitignore  README.md
riotApi/: Cargo.toml
riotApi/src/: main.rs  responseModels.rs
riotApi/src/models/: game.rs  scannedPlayer.rs
