[package]
name = "riotApi"
version = "0.1.0"
authors = ["martis"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.3.4"
http = "0.2.3"
chrono = "0.4.19"
diesel = { version = "1.4.5", features = ["postgres"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = "1.0.120"
serde_json = "1.0.61"
serde_derive = "1.0.120"